--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "serve:Icon": "vue serve ./src/components/Icon/test.vue",
     "serve:Empty": "vue serve ./src/components/Empty/test.vue",
     "serve:ImageLoader": "vue serve ./src/components/ImageLoader/test.vue",
-    "serve:Contact": "vue serve ./src/components/Contact/test.vue",
-    "serve:Menu": "vue serve ./src/components/Menu/test.vue"
+    "serve:Contact": "vue serve ./src/components/SiteAside/Contact/test.vue",
+    "serve:Menu": "vue serve ./src/components/SiteAside/Menu/test.vue",
+    "serve:SiteAside": "vue serve ./src/components/SiteAside/test.vue"
   },
   "dependencies": {
     "core-js": "^3.6.5",
