--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "serve:SiteAside": "vue serve ./src/components/SiteAside/test.vue"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
   },
